--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,16 @@ a:active {
   background: #d5d7eb;
 }
 
+.imgContainer {
+
+}
+
+.photoImage {
+  object-fit: contain;
+  max-width: 100%;
+  height: auto;
+}
+
 #modalWindow {
   background-image: linear-gradient(to bottom, rgba(18, 19, 33, 0.9), rgba(174, 176, 209, 0.3));
 }
@@ -272,11 +282,6 @@ a:active {
     margin: 14px;
     height: 200px;
     width: 400px;
-  }
-
-  .photoImage {
-    max-width: 210px;
-    max-height: 500px;
   }
 
   .hideNoHits {
@@ -339,10 +344,6 @@ a:active {
     background-size: contain;
   }
 
-  .photoImage {
-    width: 400px;
-  }
-
   .list-group-item {
     font-size: 14px;
   }
@@ -387,35 +388,7 @@ a:active {
   }
 }
 
-@media all and (max-width: 420px) {
-  .photoImage {
-    width: 360px;
-  }
-}
-
-@media all and (max-width: 380px) {
-  .photoImage {
-    width: 325px;
-  }
-}
-
-@media all and (max-width: 365px) {
-  .photoImage {
-    width: 310px;
-  }
-}
-
-@media all and (max-width: 330px) {
-  .photoImage {
-    max-width: 270px;
-  }
-}
-
 @media all and (max-width: 300px) {
-  .photoImage {
-    max-width: 250px;
-  }
-
   .hideNoHits {
     width: 14em;
     font-size: 12px;
